# _programming

./: .gitignore  README.md  cpp3rd_content little.txt  cpp3rd_content.txt  programmer-competency-matrix.txt.c  repo-todo.txt  searchcode.url  и стало их ff.txt
_src/: #spprun#  (+13 more)
_src/mcsanc-cyg/mcsanc/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac
_src/mcsanc-cyg/mcsanc/Cuba/: ChangeLog  config.h  config.status  configure  configure.ac  makefile  makefile.in  st0LSF6M  stJyUw7C
_src/mcsanc-cyg/mcsanc/Cuba/autom4te.cache/: output.0  requests  traces.0
_src/mcsanc-cyg/mcsanc/Cuba/demo/: demo-c.c
_src/mcsanc-cyg/mcsanc/Cuba/src/common/: Fork.c  stddecl.h
_src/mcsanc-cyg/mcsanc/Cuba/src/cuhre/: Integrate.c  Rule.c  decl.h
_src/mcsanc-cyg/mcsanc/Cuba/src/divonne/: Integrate.c
_src/mcsanc-cyg/mcsanc/Looptools/: Makefile  Makefile.am  Makefile.in  clooptools.cc  tester.cc
_src/mcsanc-cyg/mcsanc/Looptools/.deps/: libMsLooptoolsXFC_a-cache.Po  libMsLooptoolsXFC_a-clooptools.Po
_src/mcsanc-cyg/mcsanc/Looptools/A/: A0.F  A00.F  ffca0.F  ffxa0.F
_src/mcsanc-cyg/mcsanc/Looptools/B/: Bcoeff.F  Bcoeffa.F  Bcoeffb.F  Bget.F  ffcb0.F  ffcb1.F  ffcb2p.F  ffcdb0.F  ffxb0.F  ffxb2p.F  ffxdb0.F  ffxdb1.F
_src/mcsanc-cyg/mcsanc/Looptools/C/: C0.F  Cget.F  ffcc0.F  ffcc0p.F  ffcel3.F  ffxc0.F  ffxc0i.F  ffxc0p.F  ffxc0p0.F
_src/mcsanc-cyg/mcsanc/Looptools/D/: D0.F  Dget.F  ffcd0.F  ffcdbd.F  ffcel4.F  ffxd0.F  ffxd0h.F  ffxd0i.F  ffxd0m0.F  ffxdbd.F
_src/mcsanc-cyg/mcsanc/Looptools/E/: E0.F  Ecoeffa.F  Ecoeffb.F  Eget.F  ffdel5.F  ffxe0.F
_src/mcsanc-cyg/mcsanc/Looptools/include/: clooptools.h  defs.h  ff.h  fferr.h  ffwarn.h  ftypes.h  looptools.h  lt.h
_src/mcsanc-cyg/mcsanc/Looptools/util/: CGaussPivot.F  Dump.F  GaussPivot.F  Li2.F  auxCD.F  cache.c  ffcrr.F  ffcxr.F  ffcxs4.F  ffdcxs.F  ffinit.F  ini.F
_src/mcsanc-cyg/mcsanc/SANC/: B0F_gen.f  C0_tbln_0.f  C0analys.f  JAW_butd_subsub1.f  JAW_butd_subsub2.f  JAW_sub.f  JAW_tbud_subsub1.f  JAW_tbud_subsub2.f  JAW_udtb_subsub1.f  JAW_udtb_subsub2.f  Makefile  Makefile.am  Makefile.in  eett_aux.f  theta_hard.f
_src/mcsanc-cyg/mcsanc/SANC/modules_cc/: Makefile  Makefile.am  Makefile.in  cc-qcd_br_1314_1112.f  cc-qcd_br_1314_1516.f  cc-qcd_br_1314_1920.f  cc-qcd_br_1314_2122.f  cc-qcd_br_1314_34.f  cc-qcd_br_1322_2114.f  cc-qcd_br_13_23__14_11_12.f  cc-qcd_br_13_23__14_15_16.f  cc-qcd_br_13_23__14_19_20.f  cc-qcd_br_13_23__14_21_22.f  cc-qcd_br_1413_1211.f  cc-qcd_br_1413_1615.f  cc-qcd_br_1413_2019.f  cc-qcd_br_1413_2221.f  cc-qcd_br_1413_43.f  cc-qcd_br_1422_1321.f  cc-qcd_br_14_23__13_12_11.f  cc-qcd_br_14_23__13_16_15.f  cc-qcd_br_14_23__13_20_19.f  cc-qcd_br_14_23__13_22_21.f  cc-qcd_br_2213_1421.f  cc-qcd_br_2214_2113.f  cc-qcd_br_23_13__14_12_11.f  cc-qcd_br_23_13__14_16_15.f  cc-qcd_br_23_13__14_20_19.f  cc-qcd_br_23_13__14_22_21.f  cc-qcd_br_23_14__13_11_12.f  cc-qcd_br_23_14__13_15_16.f  cc-qcd_br_23_14__13_19_20.f  cc-qcd_br_23_14__13_21_22.f  cc-qcd_ha_1314_1112.f  cc-qcd_ha_1314_1516.f  cc-qcd_ha_1314_1920.f  cc-qcd_ha_1314_2122.f  cc-qcd_ha_1314_34.f  cc-qcd_ha_1322_2114.f  cc-qcd_ha_13_23__14_11_12.f  (+101 more)
_src/mcsanc-cyg/mcsanc/SANC/modules_nc/: Makefile  Makefile.am  Makefile.in  nc-qcd_br_1313_1212.f  nc-qcd_br_1313_1616.f  nc-qcd_br_1313_2020.f  nc-qcd_br_1313_42.f  nc-qcd_br_13_23__13_12_12.f  nc-qcd_br_13_23__13_16_16.f  nc-qcd_br_13_23__13_20_20.f  nc-qcd_br_1414_1212.f  nc-qcd_br_1414_1616.f  nc-qcd_br_1414_2020.f  nc-qcd_br_1414_42.f  nc-qcd_br_14_23__14_12_12.f  nc-qcd_br_14_23__14_16_16.f  nc-qcd_br_14_23__14_20_20.f  nc-qcd_br_23_13__13_12_12.f  nc-qcd_br_23_13__13_16_16.f  nc-qcd_br_23_13__13_20_20.f  nc-qcd_br_23_14__14_12_12.f  nc-qcd_br_23_14__14_16_16.f  nc-qcd_br_23_14__14_20_20.f  nc-qcd_ha_1313_1212.f  nc-qcd_ha_1313_1616.f  nc-qcd_ha_1313_2020.f  nc-qcd_ha_1313_42.f  nc-qcd_ha_13_23__13_12_12.f  nc-qcd_ha_13_23__13_16_16.f  nc-qcd_ha_13_23__13_20_20.f  nc-qcd_ha_13_23__13_4_2.f  nc-qcd_ha_1414_1212.f  nc-qcd_ha_1414_1616.f  nc-qcd_ha_1414_2020.f  nc-qcd_ha_1414_42.f  nc-qcd_ha_14_23__14_12_12.f  nc-qcd_ha_14_23__14_16_16.f  nc-qcd_ha_14_23__14_20_20.f  nc-qcd_ha_14_23__14_4_2.f  nc-qcd_ha_23_13__13_12_12.f  (+54 more)
_src/mcsanc-cyg/mcsanc/autom4te.cache/: output.0  requests  traces.0  traces.1
_src/mcsanc-cyg/mcsanc/include/: Makefile  Makefile.am  Makefile.in  c_export.h  calo.h  ckm.h  compounds.h  constants.h  histogram.h  iph.h  kin_cuts.h  kinematics.h  process.h  s2n_declare.h  scales.h  stats.h  vegas.h
_src/mcsanc-cyg/mcsanc/scripts/: collect_outputs.rb  plotdelta  plotlink  plotsub  plotsum  submitter  txt2root
_src/mcsanc-cyg/mcsanc/scripts/gen_input/: README  ewparam.cfg_all.rb  example.rb  input.cfg_iborn-0.rb  mcsanc.rb  test.rb
_src/mcsanc-cyg/mcsanc/scripts/gen_input/doc/: Config_gen.html  MCSANC_Output.html  MCSANC_Session.html  MCSANCewparam.html  MCSANCinput.html  README.html  created.rid  index.html  table_of_contents.html
_src/mcsanc-cyg/mcsanc/scripts/gen_input/lib/: config_gen.rb  ewparam.cfg.erb  ewparam_gen.rb  input.cfg.erb  input_gen.rb  output.rb
_src/mcsanc-cyg/mcsanc/share/: #input.cfg#  DY_NC_NLO_EW_mu_back-bare-fix-born  DY_NC_NLO_EW_mu_forw-bare-fix-born  ewparam.cfg  input.cfg  input.dw.cfg  mcsanc-DY_NC_NLO_EW_mu-output.txt  mcsanc.exe.stackdump  pid002_DY_NC_NLO_EW_mu_born.hist  pid002_DY_NC_NLO_EW_mu_born.vgrid
_src/mcsanc-cyg/mcsanc/src/: Makefile  Makefile.am  Makefile.in  ShmHist.cc  ShmHist.dw.cc  alphaz.f  calc_proc.f  csigfun.cc  f2cpp_getters.f  getminmax.f  gg_3d.f  hist_interface.cc  init_run.f  kin_cuts.dw.f  kin_cuts.f  lor_trans.f  main.f  mt19937.f  pdf_conv.f  print_ewpars.f  qg_4d.f  qg_4d_2.f  qg_6d.f  qq_3d.f  qq_4d.f  qq_6d.f  read_ewpars.f  read_input.f  s2n_init.f  sanc_interface.f  timing.cc  utils.f  xml_dumy.f  xml_output.cc
_src/mcsanc-cyg/mcsanc/src/.deps/: libShmHist_a-ShmHist.Po  libShmHist_a-csigfun.Po  libShmHist_a-hist_interface.Po  libShmHist_a-timing.Po
_src/mcsanc-cyg/mcsanc/tests/: test.sh
_src/mcsanc-cyg/mcsanc/tests/pids/002/: ewparam.cfg  input.cfg  (+1 more)
(+19495 files in other folders)
