noinst_LIBRARIES = libSANCModulesCC.a

libSANCModulesCC_a_SOURCES = \
      cc_br_1314_1112.f  \
      cc_br_1314_1516.f  \
      cc_br_1314_1920.f  \
      cc_br_1314_2122.f  \
      cc_br_1314_34.f  \
      cc_br_1413_1211.f  \
      cc_br_1413_1615.f  \
      cc_br_1413_2019.f  \
      cc_br_1413_2221.f  \
      cc_br_1413_43.f  \
      cc_ha_1314_1112.f  \
      cc_ha_1314_1516.f  \
      cc_ha_1314_1920.f  \
      cc_ha_1314_2122.f  \
      cc_ha_1314_34.f  \
      cc_ha_1413_1211.f  \
      cc_ha_1413_1615.f  \
      cc_ha_1413_2019.f  \
      cc_ha_1413_2221.f  \
      cc_ha_1413_43.f  \
      cc_si_1314_1112.f  \
      cc_si_1314_1516.f  \
      cc_si_1314_1920.f  \
      cc_si_1314_2122.f  \
      cc_si_1314_34.f  \
      cc_si_1322_2114.f  \
      cc_si_1413_1211.f  \
      cc_si_1413_1615.f  \
      cc_si_1413_2019.f  \
      cc_si_1413_2221.f  \
      cc_si_1413_43.f  \
      cc_ff_1314_1112.F  \
      cc_ff_1314_1516.F  \
      cc_ff_1314_1920.F  \
      cc_ff_1314_2122.F  \
      cc_ff_1314_34.F  \
      cc_ff_1413_1211.F  \
      cc_ff_1413_1615.F  \
      cc_ff_1413_2019.F  \
      cc_ff_1413_2221.F  \
      cc_ff_1413_43.F \
      cc_ff_1322_2114.F  \
      cc_ff_1422_1321.F  \
      cc_ff_2213_1421.F  \
      cc_ff_2214_2113.F  \
      cc_si_1322_2114.f  \
      cc_si_1422_1321.f  \
      cc_si_2213_1421.f  \
      cc_si_2214_2113.f  \
      cc_br_1322_2114.f  \
      cc_br_1422_1321.f  \
      cc_br_2213_1421.f  \
      cc_br_2214_2113.f  \
      cc_ha_1322_2114.f  \
      cc_ha_1422_1321.f  \
      cc_ha_2213_1421.f  \
      cc_ha_2214_2113.f  \
      cc-qcd_br_1322_2114.f  \
      cc-qcd_br_1422_1321.f  \
      cc-qcd_br_2213_1421.f  \
      cc-qcd_br_2214_2113.f  \
      cc-qcd_ha_1322_2114.f  \
      cc-qcd_ha_1422_1321.f  \
      cc-qcd_ha_2213_1421.f  \
      cc-qcd_ha_2214_2113.f  \
      cc-qcd_br_1314_1112.f  \
      cc-qcd_br_1314_1516.f  \
      cc-qcd_br_1314_1920.f  \
      cc-qcd_br_1314_2122.f  \
      cc-qcd_br_1314_34.f  \
      cc-qcd_br_1413_1211.f  \
      cc-qcd_br_1413_1615.f  \
      cc-qcd_br_1413_2019.f  \
      cc-qcd_br_1413_2221.f  \
      cc-qcd_br_1413_43.f  \
      cc-qcd_ha_1314_1112.f  \
      cc-qcd_ha_1314_1516.f  \
      cc-qcd_ha_1314_1920.f  \
      cc-qcd_ha_1314_2122.f  \
      cc-qcd_ha_1314_34.f  \
      cc-qcd_ha_1413_1211.f  \
      cc-qcd_ha_1413_1615.f  \
      cc-qcd_ha_1413_2019.f  \
      cc-qcd_ha_1413_2221.f  \
      cc-qcd_ha_1413_43.f \
      cc-qcd_ha_13_23__14_11_12.f \
      cc-qcd_ha_13_23__14_15_16.f \
      cc-qcd_ha_13_23__14_19_20.f \
      cc-qcd_ha_13_23__14_21_22.f \
      cc-qcd_ha_13_23__14_3_4.f \
      cc-qcd_ha_14_23__13_12_11.f \
      cc-qcd_ha_14_23__13_16_15.f \
      cc-qcd_ha_14_23__13_20_19.f \
      cc-qcd_ha_14_23__13_22_21.f \
      cc-qcd_ha_14_23__13_4_3.f \
      cc-qcd_ha_23_13__14_12_11.f \
      cc-qcd_ha_23_13__14_16_15.f \
      cc-qcd_ha_23_13__14_20_19.f \
      cc-qcd_ha_23_13__14_22_21.f \
      cc-qcd_ha_23_13__14_4_3.f \
      cc-qcd_ha_23_14__13_11_12.f \
      cc-qcd_ha_23_14__13_15_16.f \
      cc-qcd_ha_23_14__13_19_20.f \
      cc-qcd_ha_23_14__13_21_22.f \
      cc-qcd_ha_23_14__13_3_4.f \
      \
      cc-qcd_ha_13_23__22_21_14.f \
      cc-qcd_ha_23_14__22_21_13.f \
      cc-qcd_ha_22_23__14_21_13.f \
      cc-qcd_ha_23_13__22_14_21.f \
      cc-qcd_ha_14_23__22_13_21.f \
      cc-qcd_ha_23_22__14_13_21.f \
      \
      cc_ha_1_14__13_11_12.f \
      cc_ha_13_1__14_11_12.f \
      cc_ha_1_13__14_12_11.f \
      cc_ha_14_1__13_12_11.f \
      \
      cc_ha_1_14__13_15_16.f \
      cc_ha_13_1__14_15_16.f \
      cc_ha_1_13__14_16_15.f \
      cc_ha_14_1__13_16_15.f \
      \
      cc_ha_1_14__13_19_20.f \
      cc_ha_13_1__14_19_20.f \
      cc_ha_1_13__14_20_19.f \
      cc_ha_14_1__13_20_19.f

libSANCModulesCC_a_FFLAGS = -I./../../Looptools/include -I./../../include \
      -fno-automatic -ffixed-line-length-132
