noinst_LIBRARIES = libSANCModulesNC.a

libSANCModulesNC_a_SOURCES = \
	nc_br_1313_1212.f  \
	nc_br_1313_1616.f  \
	nc_br_1313_2020.f  \
	nc_br_1313_42.f  \
	nc_br_1414_1212.f  \
	nc_br_1414_1616.f  \
	nc_br_1414_2020.f  \
	nc_br_1414_42.f  \
	nc_ff_1313_1212.F  \
	nc_ff_1313_1616.F  \
	nc_ff_1313_2020.F  \
	nc_ff_1313_42.F  \
	nc_ff_1414_1212.F  \
	nc_ff_1414_1616.F  \
	nc_ff_1414_2020.F  \
	nc_ff_1414_42.F  \
	nc_ha_1313_1212.f  \
	nc_ha_1313_1616.f  \
	nc_ha_1313_2020.f  \
	nc_ha_1313_42.f  \
	nc_ha_1414_1212.f  \
	nc_ha_1414_1616.f  \
	nc_ha_1414_2020.f  \
	nc_ha_1414_42.f  \
	nc_si_1313_1212.f  \
	nc_si_1313_1616.f  \
	nc_si_1313_2020.f  \
	nc_si_1313_42.f  \
	nc_si_1414_1212.f  \
	nc_si_1414_1616.f  \
	nc_si_1414_2020.f  \
	nc_si_1414_42.f \
	nc-qcd_br_1313_1212.f  \
	nc-qcd_br_1313_1616.f  \
	nc-qcd_br_1313_2020.f  \
	nc-qcd_br_1313_42.f  \
	nc-qcd_br_1414_1212.f  \
	nc-qcd_br_1414_1616.f  \
	nc-qcd_br_1414_2020.f  \
	nc-qcd_br_1414_42.f  \
	nc-qcd_ha_1313_1212.f  \
	nc-qcd_ha_1313_1616.f  \
	nc-qcd_ha_1313_2020.f  \
	nc-qcd_ha_1313_42.f  \
	nc-qcd_ha_1414_1212.f  \
	nc-qcd_ha_1414_1616.f  \
	nc-qcd_ha_1414_2020.f  \
	nc-qcd_ha_1414_42.f \
	nc-qcd_ha_23_13__13_12_12.f \
	nc-qcd_ha_23_14__14_12_12.f \
	nc-qcd_ha_13_23__13_12_12.f \
	nc-qcd_ha_14_23__14_12_12.f \
	nc-qcd_ha_23_13__13_16_16.f \
	nc-qcd_ha_23_14__14_16_16.f \
	nc-qcd_ha_13_23__13_16_16.f \
	nc-qcd_ha_14_23__14_16_16.f \
	nc-qcd_ha_23_13__13_20_20.f \
	nc-qcd_ha_23_14__14_20_20.f \
	nc-qcd_ha_13_23__13_20_20.f \
	nc-qcd_ha_14_23__14_20_20.f \
	nc-qcd_ha_23_13__13_4_2.f \
	nc-qcd_ha_23_14__14_4_2.f \
	nc-qcd_ha_13_23__13_4_2.f \
	nc-qcd_ha_14_23__14_4_2.f \
	nc_ha_1_13__13_12_12.f \
	nc_ha_1_14__14_12_12.f \
	nc_ha_1_13__13_16_16.f \
	nc_ha_1_14__14_16_16.f \
	nc_ha_1_13__13_20_20.f \
	nc_ha_1_14__14_20_20.f \
	nc_ha_13_1__13_12_12.f \
	nc_ha_14_1__14_12_12.f \
	nc_ha_13_1__13_16_16.f \
	nc_ha_14_1__14_16_16.f \
	nc_ha_13_1__13_20_20.f \
	nc_ha_14_1__14_20_20.f \
	nc_br_11_1212.f \
	nc_br_11_1616.f \
	nc_br_11_2020.f

libSANCModulesNC_a_FFLAGS = -I./../../Looptools/include -I./../../include \
       -fno-automatic -ffixed-line-length-132
#	-I../../Looptools/include 
